Added contributors section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     a branching model for Git developed by Vincent Driessen. The purpose of this project is to demonstrate how GitFlow can 
     be used effectively in real-world software development environments, especially for managing multiple parallel feature 
     developments, bug fixes, and releases.</p>
+    <h2>Contributors</h2>
+    <ul>
+        <li><strong>Arij Habbechi</strong> - Lead Developer</li>
+        <li><strong>Chaima Raach</strong> - UI/UX Designer</li>
+  
+    </ul>
 
     <h2>Key Principles</h2>
     <p>The GitFlow model is ideal for projects with a continuous development cycle and emphasizes the clear separation of 
