Added licence section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     deployments.</p>
 
     <h2>License</h2>
-    <p>This project is licensed under the MIT License. For more details, please refer to the <a href="LICENSE">LICENSE file</a>.</p>
+    <p>This project is licensed under the MIT License. For more details, you refer to the <a href="LICENSE">LICENSE file</a>.</p>
 
 </div>
 
